samples/_failures_safe/1761653801_6ab84e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13d0100f.c: In function ‘main’:
./samples/SAFE/__tmp_13d0100f.c:143:32: error: expected ‘)’ at end of input
  143 |         if (scanf("%d", &choice
      |                  ~             ^
      |                                )
./samples/SAFE/__tmp_13d0100f.c:143:9: error: expected declaration or statement at end of input
  143 |         if (scanf("%d", &choice
      |         ^~
./samples/SAFE/__tmp_13d0100f.c:143:9: error: expected declaration or statement at end of input
